@@ -26,11 +26,16 @@ get_global (void) __critical
 }
 #endif
 
-#if defined(__SDCC_mcs51) || defined(__SDCC_z80) || defined(__SDCC_z180) || defined(__SDCC_r2k) || defined(__SDCC_r3ka) || defined(__SDCC_hc08) || defined(__SDCC_s08) || defined(__SDCC_tlcs90)
+#if defined(__SDCC_mcs51) || defined(__SDCC_z80) || defined(__SDCC_z180) || defined(__SDCC_r2k) || defined(__SDCC_r3ka) || defined(__SDCC_hc08) || defined(__SDCC_s08) || defined(__SDCC_tlcs90) || defined(__SDCC_stm8)
 // Check that param offsets are correctly adjusted for critial functions
 long critical_function(long a, long b, long c) __critical
 {
   return a + b + c;
+}
+long fres;
+inline void critical_function_inline(long a, long b, long c) __critical
+{
+  fres = a + b + c;
 }
 #endif
 
@@ -70,8 +75,10 @@ testCritical (void)
   ASSERT (1);
 #endif
 
-#if defined(__SDCC_mcs51) || defined(__SDCC_z80) || defined(__SDCC_z180) || defined(__SDCC_r2k) || defined(__SDCC_r3ka) || defined(__SDCC_hc08) || defined(__SDCC_s08) || defined(__SDCC_tlcs90)
+#if defined(__SDCC_mcs51) || defined(__SDCC_z80) || defined(__SDCC_z180) || defined(__SDCC_r2k) || defined(__SDCC_r3ka) || defined(__SDCC_hc08) || defined(__SDCC_s08) || defined(__SDCC_tlcs90) || defined(__SDCC_stm8)
   ASSERT(critical_function(1, 1, 1) == 3);
+  critical_function_inline(10, 12, 41);
+  ASSERT(fres == 63);
 #endif
 }
 
